@@ -4,7 +4,8 @@ Quite a lot of basic engine stuff was done before this changelog was created. So
 
 === === === ===
 26.11.2011:
- - add drag$drop for OrderMarkers
+ - add drag&drop for OrderMarkers
+ - add order cancelling
 
 25.11.2011:
  - fix group orders mixing their targets
